# services/auth/src/schemas/auth-user.ts
@@ -1,0 +1,8 @@
+import { SignupSchema } from './signup';
+
+export const CreateAuthUserSchema = SignupSchema.pick({
+  usernameOrEmail: true,
+  password: true,
+});
+
+export type CreateAuthUser = (typeof CreateAuthUserSchema)['_output'];
